# ExperimentalTabletopEncounterSimulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  custom_enemy.json  go.mod  main.go  makefile  old_main.go  player.json  readme.md
cmd/simulator/: main.go
internal/arena/: arena.go
internal/combat/: action_request.go  attack.go  contexts.go  damage_contributor.go  damage_modifier.go  damage_sources.go  effects.go  event.go  log.go  resolver.go
internal/dice/: log.go  roll.go
internal/engine/: engine.go  log.go
internal/entity/: character.go  character_test.go  log.go  runtime.go  stats.go
internal/factories/: character.go  log.go  monsters.go
internal/log/: logger.go
internal/logging/: logger.go
internal/monsters/: factory.go  log.go
internal/rules/: damage_types.go
internal/simulator/: log.go  simulator.go
resources/: character.json  config.json  custom_monster.json  geraktril.json  reishid.json  uktril.json
src/: main.cpp
src/internal/abilities/: ability.cpp  ability.h  ability_id.h
src/internal/combat/: attack.cpp  attack.h  attack_queue.h  attack_result.h  combat_context.h  combat_event_types.h  combat_events.h  damage_modification.h  effect.h  event_manager.cpp  event_manager.h
src/internal/config/: config.cpp  config.h
src/internal/dice_rolls/: random_engine.cpp  random_engine.h  roller.cpp  roller.h  term.cpp  term.h
src/internal/engine/: ai_director.cpp  ai_director.h  combat_engine.cpp  combat_engine.h  director.cpp  director.h  encounter.cpp  encounter.h
src/internal/entities/: ability_manager.cpp  ability_manager.h  combat_profile.cpp  combat_profile.h  defense_profile.cpp  defense_profile.h  entity.cpp  entity.h  entity_config.h  health_component.cpp  health_component.h  i_ability_holder.h  i_combatant.h  i_damageable.h  i_entity.h  stats.h
src/internal/factory/: factory.cpp  factory.h  i_factory.h  monster_factory.cpp  monster_factory.h
src/internal/items/: enchantment.h  enchantment_library.cpp  enchantment_library.h  weapon.h
src/internal/logging/: log_manager.cpp  log_manager.h  logger.cpp  logger.h
src/internal/positioning/: auto_layout.cpp  auto_layout.h  entity_size.cpp  entity_size.h  grid_pos.cpp  grid_pos.h  movement_resolver.cpp  movement_resolver.h  position_map.cpp  position_map.h
src/internal/resolver/: attack_resolver.cpp  attack_resolver.h  damage_resolver.cpp  damage_resolver.h
src/internal/rules/: alignment.h  damage_types.h  resistances.h
src/internal/simulator/: simulator.cpp  simulator.h
tests/: CMakeLists.txt
tests/basic/: basictest.cpp
tests/integration/: ability_duro_de_ferir_tests.cpp  ability_duro_de_matar_tests.cpp  ability_erosao_tests.cpp  ability_rigidez_raivosa_tests.cpp  ability_trespassar_tests.cpp  combat_pipeline_tests.cpp  enchantment_tests.cpp  multi_ability_interaction_tests.cpp  ranged_weapon_tests.cpp  test_helpers.h
tests/internal/combat/: attack_move_tests.cpp  event_manager_tests.cpp
tests/internal/dice_rolls/: roller_distribution_tests.cpp  roller_tests.cpp  term_parser_tests.cpp  term_tests.cpp
tests/internal/engine/: encounter_tests.cpp
tests/internal/entities/: ability_manager_tests.cpp  combat_profile_tests.cpp  defense_profile_tests.cpp  entity_tests.cpp  health_component_tests.cpp
tests/internal/positioning/: auto_layout_tests.cpp  entity_size_tests.cpp  grid_pos_tests.cpp  movement_resolver_tests.cpp  position_map_tests.cpp
tests/internal/resolver/: attack_resolver_tests.cpp  damage_resolver_tests.cpp
tests/mocks/: mock_entity.h  mock_random_engine.h
